# nova-browser-ecdsa

./: .gitattributes  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
apps/web/: next.config.js  package.json  postcss.config.js  tailwind.config.js
apps/web/app/: fonts.ts  layout.tsx  page.tsx
apps/web/hooks/: useFolding.ts  useGenerateParams.ts  useProve.ts  useVerify.ts
apps/web/public/: agg_ecdsa.wasm  agg_ecdsa_mobile.r1cs  batch.json
apps/web/types/: types.ts
apps/web/workers/: generate-params.worker.ts  generate-proof.worker.ts  shared.ts  verify.worker.ts
nova-ecdsa/: Cargo.toml
nova-ecdsa-browser/: Cargo.toml  notes.md
nova-ecdsa-browser/src/: lib.rs  wasm.rs
nova-ecdsa/src/: main.rs
nova-ecdsa/src/data/: agg_ecdsa.wasm  agg_ecdsa_mobile.wasm
nova-ecdsa/src/data/circuits/: batch_efficient_ecdsa_pubkey.circom  compile.sh  efficient_ecdsa_pubkey.circom  main.circom
