[package]
name = "nova-ecdsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nova-scotia = { git = "https://github.com/dmpierre/Nova-Scotia.git", branch = "secp_secq" }
ff = { version = "0.13", features = ["derive"]}
nova-snark = { git = "https://github.com/dmpierre/Nova.git", default-features = false, branch = "dev-secpsecq-031738d" }
serde = "1.0.185"
serde_json = "1.0.105"